# MCP-Gateway

./: .gitignore  CLAUDE.md  CLAUDE_RULES.md  README.md  next_session.md
.archive/: CLAUDE.md  next_session.md
.claude/: settings.local.json
docs/: FAILURE_MODEL.md  INVARIANTS.md
docs/adr/: 0001-core-architecture.md
mcp-demo/: README.md
mcp-demo/python/: ARCHITECTURE.md  Procfile  pyproject.toml  requirements.txt
mcp-demo/python/rest_to_mcp/: __init__.py  adapter.py  benchmarks.py  config.py  dashboard.py  endpoints.py  errors.py  models.py  playground.py  server.py
mcp-demo/python/rest_to_mcp/domains/: __init__.py  jsonplaceholder.py  openmeteo.py
mcp-demo/python/rest_to_mcp/static/css/: dashboard.css
mcp-demo/python/rest_to_mcp/static/js/: dashboard.js
mcp-demo/python/rest_to_mcp/templates/: dashboard.html
mcp-demo/python/tests/: conftest.py  test_adapter.py  test_integration.py  test_invariants.py  test_models.py
mcp-demo/rust/mcp_parser/: Cargo.toml  README.md  pyproject.toml
mcp-demo/rust/mcp_parser/benches/: parser_bench.rs
mcp-demo/rust/mcp_parser/src/: lib.rs
reference_mcp_server/: README.md  server.py
