[package]
name = "mcp_parser"
version = "0.1.0"
edition = "2021"
description = "High-performance MCP JSON-RPC message parser with Python bindings"
license = "MIT"

[lib]
name = "mcp_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parser_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
